postgres function added

--- a/db/020-db_software_upgrade/init.cfg
+++ b/db/020-db_software_upgrade/init.cfg
@@ -1,7 +1,7 @@
-rootpsw=new-password
-db_user_name=software_upgrade
-db_password=admin#123
-db_avs=software_upgrade
-avs_release=6.3
-port_number=3306
+rootpsw=postgres
+db_user_name=postgres
+db_password=postgres
+db=test
+release=6.3
+port_number=5432
 host_name=localhost
