admin servie db script

--- a/db/admin-service/init.cfg
+++ b/db/admin-service/init.cfg
@@ -1,5 +1,5 @@
 db_user_name=postgres
 db_password=postgres
-db=admin_service
+db=esycation_admin
 port_number=5432
-host_name=localhost
+host_name=127.0.0.1
